macros/tests/ui/declare/fix_attr_indirect_follow_host_fail.stderr
error: There is a directly circle depends exist, this will cause infinite loop: b.cursor ~> a , a.cursor ~> b
  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:23:11
   |
23 |       id: a,
   |           ^
24 |       size: Size::zero(),
25 |       cursor: b.cursor,
   |       ^^^^^^  ^^^^^^^^
26 |       SizedBox {
27 |         id: b,
   |             ^
28 |         size: Size::zero(),
29 |         cursor: a.cursor
   |         ^^^^^^  ^^^^^^^^
   |
note: You should manual watch to break circle, subscribe only if the value really changed.
       `let_watch!(...).distinct_until_changed().subscribe(...)`

  --> tests/ui/declare/fix_attr_indirect_follow_host_fail.rs:25:7
   |
25 |       cursor: b.cursor,
   |       ^^^^^^
...
29 |         cursor: a.cursor
   |         ^^^^^^
